# backend/Api/Controllers/TriggerHealthCheck/TriggerHealthCheckResponse.cs
@@ -1,0 +1,7 @@
+namespace NzbWebDAV.Api.Controllers.TriggerHealthCheck;
+
+public class TriggerHealthCheckResponse : BaseApiResponse
+{
+    public int QueuedCount { get; init; }
+    public bool AlreadyRunning { get; init; }
+}
